--- a/estilo.css
+++ b/estilo.css
@@ -3,5 +3,21 @@ body{
 }
 h1{
   text-align: center;
-
 }
+.caixa1{
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: white;
+  bottom: 0;
+  right: 0;
+}
+.caixa2{
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: white;
+  bottom: 30;
+  right: 0;
+}
+
