--- a/estilo.css
+++ b/estilo.css
@@ -1,23 +1,35 @@
-body{
-  background: grey;
+body {
+  background-color: rgb(216, 226, 197)
 }
-h1{
+h1 {
   text-align: center;
 }
-.caixa1{
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: white;
-  bottom: 0;
-  right: 0;
+.menuPrincipal {
+   position: relative;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 50px;
+   background:rgb(205, 179, 223);
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.caixa2{
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: white;
-  bottom: 30;
-  right: 0;
+nav ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: 0;
 }
-
+li {
+  float: left;
+}
+li a{
+  display: block;
+  color: aliceblue;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  color:rgb(102, 80, 116);
+  background: lightblue;
+}
