--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(216, 226, 197)
+  background-color: rgb(216, 216, 216)
 }
 h1 {
   text-align: center;
@@ -10,7 +10,7 @@ h1 {
    left: 0;
    width: 100%;
    height: 70px;
-   background:rgb(137, 116, 151);
+   background:rgb(153, 67, 67);
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 nav ul{
@@ -30,15 +30,15 @@ li a{
   text-decoration: none;
 }
 li a:hover {
-  color:rgb(61, 48, 70);
-  background: rgb(178, 197, 218);
+  color:rgb(70, 45, 45);
+  background: rgb(170, 190, 212);
 }
 .rodape {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 35px;
-  background: rgb(137, 116, 151);
+  background: rgb(109, 62, 62);
   color: blanchedalmond;
   justify-content: center;
   display: flex;
@@ -49,4 +49,9 @@ li a:hover {
   right: 38%;
   position: absolute;
   justify-content: center;
+}
+
+.cu {
+bottom: 10px;
+top: ;
 }
