--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,8 @@ body {
 }
 h1 {
   text-align: center;
+  font-style: italic;
+  font-size: 50px;
 }
 .menuPrincipal {
    position: relative;
@@ -11,7 +13,7 @@ h1 {
    width: 100%;
    height: 70px;
    background:rgb(153, 67, 67);
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, Geneva, Tahoma, sans-serif, Verdana, sans-serif;
 }
 nav ul{
   list-style-type: none;
@@ -51,7 +53,17 @@ li a:hover {
   justify-content: center;
 }
 
-.cu {
-bottom: 10px;
-top: ;
+.texto {
+ position: absolute;
+ bottom: 180px;
+ font-size: 20px;
+font-family: monospace; 
+}
+
+#integrantes {
+  width: 25%;
+  top: 60px;
+  right: 38%;
+  position: absolute;
+  justify-content: center;
 }
