--- a/estilo.css
+++ b/estilo.css
@@ -55,15 +55,27 @@ li a:hover {
 
 .texto {
  position: absolute;
- bottom: 180px;
+ bottom: 135px;
  font-size: 20px;
-font-family: monospace; 
+ font-family: monospace; 
+ text-align: center;
 }
 
 #integrantes {
-  width: 25%;
-  top: 60px;
-  right: 38%;
+  width: 30%;
+  top: 85px;
+  right: 37%;
   position: absolute;
   justify-content: center;
 }
+.disco {
+  position: center;
+  bottom: -35px;
+  font-size: 20px;
+  font-family: monospace; 
+ }
+ .para {
+  text-align: center;
+  font-size: 20px;
+ }
+ 
